--- a/src/assets/_fonts.scss
+++ b/src/assets/_fonts.scss
@@ -1,3 +1,5 @@
+@import url(//fonts.googleapis.com/css?family=Noto+Sans);
+
 // Noto Sans Armenian
 @import url(//fonts.googleapis.com/earlyaccess/notosansarmenian.css);
 .hy {
