font support for all languages

--- a/src/assets/_fonts.scss
+++ b/src/assets/_fonts.scss
@@ -28,3 +28,15 @@
 // Noto Sans Telugu
 @import url('//fonts.googleapis.com/earlyaccess/notosanstelugu.css');
 .te { font-family: 'Noto Sans Telugu', sans-serif; }
+
+// Noto Sans Ethiopic
+@import url('//fonts.googleapis.com/earlyaccess/notosansethiopic.css');
+.am { font-family: 'Noto Sans Ethiopic', sans-serif; }
+
+// Noto Sans Malayalam
+@import url('//fonts.googleapis.com/earlyaccess/notosansmalayalam.css');
+.ml { font-family: 'Noto Sans Malayalam', sans-serif; }
+
+// Noto Sans Gurmukhi
+@import url('//fonts.googleapis.com/earlyaccess/notosansgurmukhi.css');
+.pa { font-family: 'Noto Sans Gurmukhi', sans-serif; }
