better font selectors, reverting translation logic

--- a/src/assets/_fonts.scss
+++ b/src/assets/_fonts.scss
@@ -3,40 +3,40 @@
 
 // Noto Sans Armenian
 @import url('//fonts.googleapis.com/earlyaccess/notosansarmenian.css');
-.hy { font-family: 'Noto Sans Armenian', sans-serif; }
+input.translation.hy { font-family: 'Noto Sans Armenian', sans-serif; }
 
 // Noto Sans Bengali
 @import url('//fonts.googleapis.com/earlyaccess/notosansbengali.css');
-.bn { font-family: 'Noto Sans Bengali', sans-serif; }
+input.translation.bn { font-family: 'Noto Sans Bengali', sans-serif; }
 
 // Noto Sans Gujarati
 @import url('//fonts.googleapis.com/earlyaccess/notosansgujarati.css');
-.gu { font-family: 'Noto Sans Gujarati', sans-serif; }
+input.translation.gu { font-family: 'Noto Sans Gujarati', sans-serif; }
 
 // Noto Sans Kannada
 @import url('//fonts.googleapis.com/earlyaccess/notosanskannada.css');
-.kn { font-family: 'Noto Sans Kannada', sans-serif; }
+input.translation.kn { font-family: 'Noto Sans Kannada', sans-serif; }
 
 // Noto Sans Sinhala
 @import url('//fonts.googleapis.com/earlyaccess/notosanssinhala.css');
-.si { font-family: 'Noto Sans Sinhala', sans-serif; }
+input.translation.si { font-family: 'Noto Sans Sinhala', sans-serif; }
 
 // Noto Sans Tamil
 @import url('//fonts.googleapis.com/earlyaccess/notosanstamil.css');
-.ta { font-family: 'Noto Sans Tamil', sans-serif; }
+input.translation.ta { font-family: 'Noto Sans Tamil', sans-serif; }
 
 // Noto Sans Telugu
 @import url('//fonts.googleapis.com/earlyaccess/notosanstelugu.css');
-.te { font-family: 'Noto Sans Telugu', sans-serif; }
+input.translation.te { font-family: 'Noto Sans Telugu', sans-serif; }
 
 // Noto Sans Ethiopic
 @import url('//fonts.googleapis.com/earlyaccess/notosansethiopic.css');
-.am { font-family: 'Noto Sans Ethiopic', sans-serif; }
+input.translation.am { font-family: 'Noto Sans Ethiopic', sans-serif; }
 
 // Noto Sans Malayalam
 @import url('//fonts.googleapis.com/earlyaccess/notosansmalayalam.css');
-.ml { font-family: 'Noto Sans Malayalam', sans-serif; }
+input.translation.ml { font-family: 'Noto Sans Malayalam', sans-serif; }
 
 // Noto Sans Gurmukhi
 @import url('//fonts.googleapis.com/earlyaccess/notosansgurmukhi.css');
-.pa { font-family: 'Noto Sans Gurmukhi', sans-serif; }
+input.translation.pa { font-family: 'Noto Sans Gurmukhi', sans-serif; }
